--- a/app/src/main/res/layout/activity_org.xml
+++ b/app/src/main/res/layout/activity_org.xml
@@ -10,122 +10,133 @@
         style="@style/BB_BottomBarBadge_Text">
     </include>
 
-    <TextView
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/email"
-        android:textStyle="bold"
-        android:textColor="@color/colorAccent"
-        android:textSize="18sp"
-        android:layout_gravity="end"
-        android:id="@+id/useremail"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="30dp"
-        android:textAlignment="center"
-        android:textAllCaps="true" />
-
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_marginTop="20dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:layout_width="353dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:layout_marginLeft="20dp"
-            android:text="@string/choose_organization"
-            android:textStyle="bold"
-            android:layout_marginRight="20dp"
-            android:textColor="@color/textcolor"
-            android:textSize="18sp" />
-
+        android:layout_height="match_parent">
 
         <LinearLayout
-            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:background="@drawable/divider"
-            android:layout_marginTop="10dp">
-
+            android:orientation="vertical" >
 
             <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:id="@+id/org_id"
-                android:visibility="gone"
-                android:layout_marginLeft="10dp"
-                android:text=""
-                android:textSize="18sp"
-                android:textColor="@color/textcolor"
-                android:layout_marginBottom="5dp"
-                android:layout_weight="1"
-                tools:ignore="RtlHardcoded" />
-
-            <Spinner
-                android:id="@+id/spinner"
-                android:visibility="gone"
-                android:paddingBottom="10dp"
-                android:paddingTop="10dp"
-                android:spinnerMode="dialog"
-                android:prompt="@string/org"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:text="@string/email"
+                android:textStyle="bold"
+                android:textColor="@color/colorAccent"
+                android:textSize="18sp"
+                android:layout_gravity="end"
+                android:id="@+id/useremail"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="30dp"
+                android:textAlignment="center"
+                android:textAllCaps="true" />
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_marginTop="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:layout_width="353dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="30dp"
+                    android:layout_marginLeft="20dp"
+                    android:text="@string/choose_organization"
+                    android:textStyle="bold"
+                    android:layout_marginRight="20dp"
+                    android:textColor="@color/textcolor"
+                    android:textSize="18sp" />
+
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:background="@drawable/divider"
+                    android:layout_marginTop="10dp">
+
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:id="@+id/org_id"
+                        android:visibility="gone"
+                        android:layout_marginLeft="10dp"
+                        android:text=""
+                        android:textSize="18sp"
+                        android:textColor="@color/textcolor"
+                        android:layout_marginBottom="5dp"
+                        android:layout_weight="1"
+                        tools:ignore="RtlHardcoded" />
+
+                    <Spinner
+                        android:id="@+id/spinner"
+                        android:visibility="gone"
+                        android:paddingBottom="10dp"
+                        android:paddingTop="10dp"
+                        android:spinnerMode="dialog"
+                        android:prompt="@string/org"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+                </LinearLayout>
+            </LinearLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/passwordinput"
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="8dp">
+
+                <EditText android:id="@+id/editTextPassword"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="numberPassword"
+                    android:textStyle="bold"
+                    android:textSize="20sp"
+                    android:textColor="@color/textcolor"
+                    android:hint="@string/pin_label"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp" />
+
+            </android.support.design.widget.TextInputLayout>
+
+            <Button
+                android:id="@+id/buttonLogin"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/colorAccent"
+                android:textColor="@android:color/white"
+                android:layout_marginTop="20dp"
+                android:layout_gravity="center"
+                android:clickable="true"
+                android:layout_marginBottom="10dp"
+                android:padding="12dp"
+                android:text="@string/login"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:textStyle="normal|bold"
+                android:textSize="18sp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/diffuser"
+                android:textSize="15sp"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:textColor="@color/textcolor"
+                android:text="@string/hint_login_user"
+                android:clickable="true"
+                android:textAlignment="center" />
         </LinearLayout>
-    </LinearLayout>
-
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/passwordinput"
-        android:layout_marginTop="30dp"
-        android:layout_marginBottom="8dp">
-
-        <EditText android:id="@+id/editTextPassword"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="numberPassword"
-            android:textStyle="bold"
-            android:textSize="20sp"
-            android:textColor="@color/textcolor"
-            android:hint="@string/pin_label"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp" />
-
-    </android.support.design.widget.TextInputLayout>
-
-    <Button
-        android:id="@+id/buttonLogin"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorAccent"
-        android:textColor="@android:color/white"
-        android:layout_marginTop="20dp"
-        android:layout_gravity="center"
-        android:clickable="true"
-        android:layout_marginBottom="10dp"
-        android:padding="12dp"
-        android:text="@string/login"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:textStyle="normal|bold"
-        android:textSize="18sp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/diffuser"
-        android:textSize="15sp"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:textColor="@color/textcolor"
-        android:text="@string/hint_login_user"
-        android:clickable="true"
-        android:textAlignment="center" />
+    </ScrollView>
 
 </LinearLayout>
