--- a/app/src/main/res/layout/timetable_row.xml
+++ b/app/src/main/res/layout/timetable_row.xml
@@ -1,38 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <TextView
-        android:layout_width="match_parent"
-        android:text="ggg"
-        android:layout_height="wrap_content"
-        android:id="@+id/name"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="ggg"
-        android:id="@+id/start_time"/>
+<LinearLayout android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_height="wrap_content"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@drawable/divider">
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
+        android:paddingLeft="10dp"
+        android:paddingTop="5dp"
         android:layout_height="wrap_content"
-        android:text="ggg"
-        android:id="@+id/end_time"/>
+        android:paddingRight="10dp"
+        android:orientation="horizontal">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="ggg"
-        android:id="@+id/class_div"/>
+        <TextView
+            android:id="@+id/subject"
+            android:layout_width="206dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="Name"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:paddingTop="2dp"
+            android:textSize="18sp"
+            android:fontFamily="sans-serif"
+            android:textColor="@color/colorAccent"
+            android:textStyle="bold"
+            android:textAllCaps="false"
+            android:layout_weight="0.64" />
 
-    <TextView
+        <TextView
+            android:id="@+id/start_time"
+            android:layout_width="wrap_content"
+            android:textColor="@color/bb_inActiveBottomBarItemColor"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textSize="14sp"
+            android:layout_height="wrap_content"
+            android:text="9.00"
+            android:textAlignment="viewEnd"
+            android:paddingTop="6dp" />
+
+        <TextView
+            android:text=" - "
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/hyphen"
+            android:paddingTop="6dp" />
+
+        <TextView
+            android:id="@+id/end_time"
+            android:layout_width="wrap_content"
+            android:textColor="@color/bb_inActiveBottomBarItemColor"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textSize="14sp"
+            android:layout_height="wrap_content"
+            android:text="10.00"
+            android:paddingTop="6dp" />
+
+    </LinearLayout>
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="ggg"
-        android:id="@+id/subject"/>
-    <View
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:orientation="horizontal" >
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="match_parent"
+            android:textColor="@color/bb_inActiveBottomBarItemColor"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textSize="14dp"
+            android:layout_height="wrap_content"
+            android:text="Subject"
+            android:layout_gravity="right"
+            android:fontFamily="sans-serif"
+            android:textAlignment="viewStart" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@android:color/darker_gray"/>
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp">
+
+        <TextView
+            android:id="@+id/class_div"
+            android:layout_width="match_parent"
+            android:textSize="14sp"
+            android:textColor="@color/bb_inActiveBottomBarItemColor"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:layout_height="wrap_content"
+            android:text="Division"
+            android:layout_gravity="left"
+            android:fontFamily="sans-serif" />
+    </LinearLayout>
 
 </LinearLayout>
+    <!--</android.support.v7.widget.CardView>-->
