--- a/app/src/main/res/layout/timetable_activity.xml
+++ b/app/src/main/res/layout/timetable_activity.xml
@@ -34,18 +34,28 @@ android:elevation="7dp">
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorWhite"
-        android:layout_margin="10dp">
+        android:background="@color/stripBgColor">
 
-        <Spinner
-            android:id="@+id/spinner"
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:spinnerMode="dialog"
-            android:padding="10dp" />
+            android:layout_height="match_parent"
+            android:background="@color/colorWhite"
+            android:layout_margin="10dp">
+
+            <Spinner
+                android:id="@+id/spinner"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:spinnerMode="dialog"
+                android:padding="10dp" />
+        </LinearLayout>
 
     </LinearLayout>
-
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.3dp"
+        android:background="@color/bottomLine"/>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
