--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="textcolor">#000000</color>
     <color name="colorWhite">#ffffff</color>
     <color name="bottomLine">#dcdcdc</color>
+    <color name="stripBgColor">#F0F8FF</color>
 </resources>
