--- a/app/src/main/res/layout-v21/timetable_activity.xml
+++ b/app/src/main/res/layout-v21/timetable_activity.xml
@@ -67,7 +67,7 @@ android:elevation="7dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical" >
 
             <TextView
