--- a/app/src/main/res/layout/student_catalog.xml
+++ b/app/src/main/res/layout/student_catalog.xml
@@ -81,8 +81,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:id="@+id/scrollView_st_catalog" >
+                    android:orientation="vertical">
 
                     <TextView
                         android:id="@+id/noSdData"
@@ -104,9 +103,9 @@
                         android:id="@+id/sd_recycler_view"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:descendantFocusability="blocksDescendants"
-                        app:reverseLayout="true"
-                        app:stackFromEnd="true">
+                        app:reverseLayout="false"
+                        app:stackFromEnd="false"
+                        android:scrollbars="vertical">
 
                     </android.support.v7.widget.RecyclerView>
 
