--- a/app/src/main/res/layout-v21/daily_fill_catalog.xml
+++ b/app/src/main/res/layout-v21/daily_fill_catalog.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/DrawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -79,17 +80,14 @@
                         android:textAlignment="center"
                         android:layout_marginTop="40dp" />
 
-                    <android.support.v4.widget.SwipeRefreshLayout
-                        android:id="@+id/swipe_refresh"
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/dailyT_recycler_view"
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_width="match_parent">
-                        <android.support.v7.widget.RecyclerView
-                            android:id="@+id/dailyT_recycler_view"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent">
+                        android:scrollbars="vertical">
 
-                        </android.support.v7.widget.RecyclerView>
-                    </android.support.v4.widget.SwipeRefreshLayout>
+                    </android.support.v7.widget.RecyclerView>
+
                 </LinearLayout>
             </ScrollView>
 
