--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,14 +14,16 @@
     <!--</include>-->
 
     <ImageView
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/eracord"
         android:id="@+id/imageView4"
         android:layout_marginBottom="20dp"
         android:contentDescription="logo"
         android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp" />
+        android:layout_marginRight="40dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="40dp" />
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
